# fear-greed-6900

./: .env.example  .gitignore  .vercelignore  API_GUIDE.md  CLAUDE.md  DEPLOYMENT.md  GIT_SETUP_WINDOWS.md  IMPLEMENTATION_SUMMARY.md  LANDING_PAGE_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE5_SUMMARY.md  QUICK_START.txt  README.md  STARTUP.md  START_FRONTEND.md  TRANSFORMATION_COMPLETE.md  VERCEL_CRON_SETUP.md  architecture.md  check_env.py  package-lock.json  plan.md  pyproject.toml  requirements.txt  run_server.py  start-backend.bat  start-frontend.bat  test_api.py  test_cron.py  test_integration.py  test_websocket.py  vercel.json  vercel_app.py
api/: index.py
docs/: FETCHER_SETUP.md  MASTER_INDEX_IMPLEMENTATION.md
examples/: fetch_cmc_data.py  get_current_index.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AnimatedGauge.tsx  Dashboard.tsx  HistoryChart.tsx  LandingPage.tsx  OdometerNumber.tsx  ScoreCard.tsx  SentimentGauge.tsx  SignalIsland.tsx
frontend/src/config/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  sound.ts
src/: __init__.py
src/aggregator/: __init__.py  brain.py
src/api/: main.py
src/fetchers/: __init__.py  base.py  cmc_fetcher.py
src/normalizers/: __init__.py  market_scorers.py  social_scorer.py
src/services/: __init__.py  binance_ws.py
src/utils/: history_manager.py
tests/: __init__.py  test_cmc_fetcher.py
